frontend/scss/state/_s-scroll-direction.scss
.s-scroll-direction-up {
  .g-header {
    opacity: 1;
  }
}

.s-scroll-direction-up.s-allow-top-link {
  .top-link {
    @include breakpoint('medium+') {
      bottom: 84px;
      transition-timing-function: $bezier--ease-out-circ;
    }

    @include breakpoint('large+') {
      bottom: 40px;
    }
  }
}

.s-scroll-direction-down.s-header-hide {
  .g-header {
    opacity: 0;
  }
}

